feat: also generate sources and javadoc JARs (#25)
Also generate a sources and JavaDoc JAR. As required by Maven Central.
#minor

Solves PZ-1058